--- a/Vercell/index.html
+++ b/Vercell/index.html
@@ -157,7 +157,7 @@
       <section>
         <header><h2>Customize your plan with Pro add-ons</h2></header>
         <div>
-          <p></p>
+          <p>$150 / month</p>
         </div>
       </section>
     </main>
